[fix] scatterplot max value overflow fix

--- a/base.less
+++ b/base.less
@@ -48,9 +48,9 @@
 
 .scatterplot .container {
     position: absolute;
-    top: 0;
+    top: e(%("%dpx", @scatterplot-dot-size * 2));
     left: 0;
-    right: 0;
+    right: e(%("%dpx", @scatterplot-dot-size * 2));
     bottom: 0;
     margin: 0; padding: 0;
 }
@@ -64,6 +64,6 @@
     width: 0;
     list-style: none;
     overflow: hidden;
-    border: 6px solid @chart-primary-color;
+    border: e(%("%dpx", @scatterplot-dot-size)) solid @chart-primary-color;
     border-radius: 100%;
 }
