--- a/defaults.less
+++ b/defaults.less
@@ -11,3 +11,4 @@
 @chart-group4-label-color: @chart-primary-label-color;
 @chart-group5-color: #95879c;
 @chart-group5-label-color: @chart-primary-label-color;
+@scatterplot-dot-size: 6;
